Update custom mla format + just do documentclass

--- a/links/texmf/tex/latex/zmla/zmla.sty
+++ b/links/texmf/tex/latex/zmla/zmla.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{mla13}
+\ProvidesPackage{zmla}
 
 \usepackage{mla13}
 \usepackage{times}
@@ -23,6 +23,4 @@ Works Cited
 \end{center}
 \printbibliography[heading=apa]
 \endgroup}
-\AtBeginDocument{\makeheader}
-\AtEndDocument{\ifsources\makeworkscited\else\fi}
 
